# auth-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROMPT.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest_output.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  a8cf1c3bb8be_initial_schema.py
app/: main.py
app/api/: router.py
app/api/dependencies/: auth_dependency.py  db_dependency.py  permission_dependency.py
app/api/routes/: auth_routes.py  permission_routes.py  role_routes.py  session_routes.py  user_routes.py
app/core/: config.py  constants.py  logging.py  security.py
app/database/: base.py  session.py
app/exceptions/: auth_exceptions.py  base_exception.py  exception_handlers.py  user_exceptions.py
app/integrations/: email_client.py  redis_client.py
app/middleware/: audit_middleware.py  logging_middleware.py  rate_limit_middleware.py
app/models/: __init__.py  permission_model.py  refresh_token_model.py  role_model.py  session_model.py  user_model.py
app/repositories/: permission_repository.py  refresh_token_repository.py  role_repository.py  session_repository.py  user_repository.py
app/schemas/: __init__.py  auth_schema.py  base_schema.py  permission_schema.py  role_schema.py  session_schema.py  token_schema.py  user_schema.py
app/security/: jwt_handler.py  mfa_handler.py  oauth2_handler.py  password_handler.py
app/services/: auth_service.py  permission_service.py  role_service.py  session_service.py  user_service.py
docker/: Dockerfile
docs/: README.md  SPEC.md  deployment-guide.md  development-guide.md  integration-guide.md  permissions-reference.md  roadmap.md  usage-guide.md
scripts/: README.md  seed_permissions.py
tests/: conftest.py
tests/api/: test_auth_routes.py  test_permission_routes.py  test_role_routes.py  test_session_routes.py  test_user_routes.py
tests/integration/repositories/: test_user_repository.py
tests/unit/security/: test_jwt_handler.py  test_mfa_handler.py  test_oauth2_handler.py  test_password_handler.py
tests/unit/services/: test_auth_service.py
