[project]
name = "auth-service"
version = "1.0.0"
description = "Microsserviço de autenticação e autorização (FastAPI + PostgreSQL + Redis)"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "pyotp>=2.9.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "aiosqlite>=0.20.0",
    "faker>=25.0.0",
    "types-passlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --------------------------------------------------------------------------
# Ruff (lint + format)
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (segurança)
    "C4",  # flake8-comprehensions
    "ASYNC", # flake8-async
]
ignore = [
    "S101", # assert usado em testes
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --------------------------------------------------------------------------
# Mypy
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*", "pyotp.*"]
ignore_missing_imports = true

# --------------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing"
